Changes to download and compile folder
Various changes

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 *.csv
 0. Raw data/.DS_Store
 0. Raw data/united-states_portland/.DS_Store
+0. Raw data/united-states_portland/.ipynb_checkpoints/Fixing_gzips_01-checkpoint.ipynb
+0. Raw data/united-states_portland/Fixing_gzips_01.ipynb
