Updates to aggregate listings and clean stage 1
Integrated stages 1 and 2 cleaning for the listing data.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 0. Raw data/united-states_portland/.DS_Store
 0. Raw data/united-states_portland/.ipynb_checkpoints/Fixing_gzips_01-checkpoint.ipynb
 0. Raw data/united-states_portland/Fixing_gzips_01.ipynb
+2. Clean data/.DS_Store
+.DS_Store
