Final weekend updates of partA & partB
Changes affecting presentation of cleaning files.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 0. Raw data/united-states_portland/Fixing_gzips_01.ipynb
 2. Clean data/.DS_Store
 .DS_Store
+LK_backup/2nd_stage_panel_data_cleaning (TO BE DELETED...).ipynb
+LK_backup/Calendar_integration_partB.py
