Ignore LK_backup folder
Ignore LK backup_folder

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 .DS_Store
 LK_backup/2nd_stage_panel_data_cleaning (TO BE DELETED...).ipynb
 LK_backup/Calendar_integration_partB.py
+LK_backup/2. Clean data/.ipynb_checkpoints/1st_stage_panel_data_cleaning-checkpoint.ipynb
+LK_backup/2. Clean data/.ipynb_checkpoints/2nd_stage_panel_data_cleaning (TO BE DELETED...)-checkpoint.ipynb
+LK_backup/2. Clean data/.ipynb_checkpoints/Calendar_integration_partA-checkpoint.ipynb
+LK_backup/2. Clean data/.ipynb_checkpoints/Calendar_integration_partB-checkpoint.ipynb
+LK_backup/2. Clean data/1st_stage_panel_data_cleaning.ipynb
+LK_backup/2. Clean data/Calendar_integration_partA.ipynb
+LK_backup/2. Clean data/Calendar_integration_partB.ipynb
