Ignore changes to the LK_backup file
Adding to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,10 @@ LK_backup/2. Clean data/.ipynb_checkpoints/Calendar_integration_partB-checkpoint
 LK_backup/2. Clean data/1st_stage_panel_data_cleaning.ipynb
 LK_backup/2. Clean data/Calendar_integration_partA.ipynb
 LK_backup/2. Clean data/Calendar_integration_partB.ipynb
+LK_backup/3. Graphics/Updated_Visualizations_LK_revision.ipynb
+LK_backup/3. Graphics/Updated Visualizations.ipynb
+LK_backup/3. Graphics/monthly_books.png
+LK_backup/3. Graphics/Calendar_integration_partB_visualizations.ipynb
+LK_backup/3. Graphics/.ipynb_checkpoints/Updated_Visualizations_LK_revision-checkpoint.ipynb
+LK_backup/3. Graphics/.ipynb_checkpoints/Updated Visualizations-checkpoint.ipynb
+LK_backup/3. Graphics/.ipynb_checkpoints/Calendar_integration_partB_visualizations-checkpoint.ipynb
