--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ LK_backup/3. Graphics/Calendar_integration_partB_visualizations.ipynb
 LK_backup/3. Graphics/.ipynb_checkpoints/Updated_Visualizations_LK_revision-checkpoint.ipynb
 LK_backup/3. Graphics/.ipynb_checkpoints/Updated Visualizations-checkpoint.ipynb
 LK_backup/3. Graphics/.ipynb_checkpoints/Calendar_integration_partB_visualizations-checkpoint.ipynb
+.DS_Store
