Pre-publish updates to repo
Last changes before publishing

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ LK_backup/3. Graphics/.ipynb_checkpoints/Updated_Visualizations_LK_revision-chec
 LK_backup/3. Graphics/.ipynb_checkpoints/Updated Visualizations-checkpoint.ipynb
 LK_backup/3. Graphics/.ipynb_checkpoints/Calendar_integration_partB_visualizations-checkpoint.ipynb
 .DS_Store
+LK_backup/Pull experiment.ipynb
+LK_backup/.ipynb_checkpoints/Pull experiment-checkpoint.ipynb
