--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ LK_backup/3. Graphics/.ipynb_checkpoints/Calendar_integration_partB_visualizatio
 .DS_Store
 LK_backup/Pull experiment.ipynb
 LK_backup/.ipynb_checkpoints/Pull experiment-checkpoint.ipynb
+.DS_Store
