Delete scraping file

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ LK_backup/3. Graphics/.ipynb_checkpoints/Calendar_integration_partB_visualizatio
 LK_backup/Pull experiment.ipynb
 LK_backup/.ipynb_checkpoints/Pull experiment-checkpoint.ipynb
 .DS_Store
+1. Download and compile data/.ipynb_checkpoints/Inside Airbnb Scrape-checkpoint.ipynb
+2. Clean data/.ipynb_checkpoints/1st_stage_panel_data_cleaning-checkpoint.ipynb
+.DS_Store
