--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ LK_backup/.ipynb_checkpoints/Pull experiment-checkpoint.ipynb
 1. Download and compile data/.ipynb_checkpoints/Inside Airbnb Scrape-checkpoint.ipynb
 2. Clean data/.ipynb_checkpoints/1st_stage_panel_data_cleaning-checkpoint.ipynb
 .DS_Store
+1. Download and compile data/Inside Airbnb Scrape.ipynb
