CleanAirbnb ignore updates

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,8 @@ LK_backup/.ipynb_checkpoints/Pull experiment-checkpoint.ipynb
 2. Clean data/.ipynb_checkpoints/1st_stage_panel_data_cleaning-checkpoint.ipynb
 .DS_Store
 1. Download and compile data/Inside Airbnb Scrape.ipynb
+1. Download and compile data/Aggregate Listings Data_update.ipynb
+2. Clean data/1st_stage_panel_data_cleaning_update.ipynb
+2. Clean data/1st_stage_panel_data_cleaning.ipynb
+2. Clean data/1st_stage_panel_data_cleaning.ipynb
+2. Clean data/1st_stage_panel_data_cleaning.ipynb
