Adding git ignores to the repository

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ LK_backup/.ipynb_checkpoints/Pull experiment-checkpoint.ipynb
 2. Clean data/1st_stage_panel_data_cleaning.ipynb
 2. Clean data/1st_stage_panel_data_cleaning.ipynb
 2. Clean data/1st_stage_panel_data_cleaning.ipynb
+Saved data/SF_1stStageClean.parquet.gzip
+2. Clean data/Stage1_optimzation.ipynb
+1. Download and compile data/.ipynb_checkpoints/Aggregate Listings Data_update-checkpoint.ipynb
+2. Clean data/.ipynb_checkpoints/1st_stage_panel_data_cleaning_update-checkpoint.ipynb
